android complete ios pending

--- a/airfire-android/app/build.gradle
+++ b/airfire-android/app/build.gradle
@@ -1,8 +1,6 @@
 apply plugin: 'com.android.application'
 
 android {
-    ndkVersion "27.0.12077973"
-
     compileSdk 34
 
     namespace 'com.airfire'
@@ -14,9 +12,6 @@ android {
 
         versionName "1.0"
         versionCode = 1
-
-        // Generate native debug symbols to allow Google Play to symbolicate our native crashes
-        ndk.debugSymbolLevel = 'FULL'
     }
 
     buildFeatures {
@@ -56,6 +51,15 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    
+    sourceSets {
+        main {
+            java {
+                exclude '**/com/limelight/**'
+                exclude '**/AirFireActivity.java'
+            }
         }
     }
 }
